Carga de sitios y logeo de usuarios

--- a/src/app/acceso/login/login.component.html
+++ b/src/app/acceso/login/login.component.html
@@ -1,4 +1,6 @@
+<button (click)="logout()" type="button" class="btn btn-outline">Logout</button>
 <div class="row">
+
     <div class="col left">
         <img src="../../../assets/img/imagen 3.png" alt="" class="col1">
         <h1 class="col1">BestPlaces</h1>
