--- a/src/app/pages/general/general.component.html
+++ b/src/app/pages/general/general.component.html
@@ -1,4 +1,13 @@
-<div class="contenedor">
+<div *ngIf="this.cargando === true" class="text-center">
+    <img src="../../../assets/img/marginalia-760.png" alt="" style="width: 300px; height: 300px;">
+
+    <div class="spinner-border" style="width: 3rem; height: 3rem; color: tomato;" role="status">
+        <span class="visually-hidden"> Cargando</span>
+    </div>
+
+    <p style="color: #595959; font-size: 20px;">Cargando </p>
+</div>
+<div *ngIf="this.cargando === false" class="contenedor">
     <div *ngFor="let item of sitios" class="tarjeta" style="width: 18rem;">
         <img [src]="item.img" class="card-img-top" alt="...">
         <div class="card-body">
