--- a/src/app/acceso/registro/registro.component.html
+++ b/src/app/acceso/registro/registro.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+
 <div class="row">
     <div class="col left">
         <!--Recuerda las animaciones para que no pase tan seco-->
