--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -23,12 +23,15 @@
                 <li class="nav-item">
                     <a href="" class="nav-link">#Precio</a>
                 </li>
+                <li class="nav-item">
+                    <a routerLink="/perfil" *ngIf="this.autenticado ===true"> Mi perfil</a>
+                </li>
 
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2 search" type="search" placeholder="Search" aria-label="Search">
-                <button *ngIf="this.autenticaion !== true" class="btn btn-outline" type="submit"> <a id="log" href="" routerLink="login">Login</a> </button>
-                <button (click)="logout()" *ngIf="this.autenticaion === true" class="btn btn-outline" type="submit"> <a id="log" href="" routerLink="home">Logout</a> </button>
+                <button *ngIf="this.autenticado === false" class="btn btn-outline" type="submit"> <a id="log" href="" routerLink="/login">Login</a> </button>
+                <button (click)="logout()" *ngIf="this.autenticado === true" class="btn btn-outline" type="submit"> <a id="log" href="" routerLink="home">Logout</a> </button>
 
             </form>
         </div>
