--- a/src/app/pages/detalle-sitio/detalle-sitio.component.html
+++ b/src/app/pages/detalle-sitio/detalle-sitio.component.html
@@ -1,3 +1,5 @@
+<app-nav [autenticado]="true"></app-nav>
+
 <div *ngIf="this.cargando === true" class="text-center">
     <img src="../../../assets/img/marginalia-760.png" alt="" style="width: 300px; height: 300px;">
 
