Agregación de nuevas funcionalidades y se resolvieron algunas funciones que faltaban

--- a/src/app/acceso/login/login.component.html
+++ b/src/app/acceso/login/login.component.html
@@ -37,7 +37,8 @@
 
 
             <p style="margin-left: 27%;">OR</p>
-            <button (click)="login()" type="button" class="btn btn-outline"><i style="margin: 5px;" class="fa fa-google" aria-hidden="true"></i>Google </button>
+            <button (click)="login()" type="button" class="btn btn-outline"><i style="margin: 5px;" class="fa fa-google"
+                    aria-hidden="true"></i>Google </button>
         </div>
 
         <a routerLink="/resetPassword">
