--- a/src/app/acceso/registro/registro.component.html
+++ b/src/app/acceso/registro/registro.component.html
@@ -33,7 +33,8 @@
                 <button class="btn btn-primary" type="submit">Registrarse</button>
 
                 <p style="margin-left: 27%;">OR</p>
-                <button type="button" class="btn btn-outline"><i style="margin: 5px;" class="fa fa-google" aria-hidden="true"></i>Google </button>
+                <button type="button" class="btn btn-outline"><i style="margin: 5px;" class="fa fa-google"
+                        aria-hidden="true"></i>Google </button>
             </div>
         </form>
 
