--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -10,7 +10,7 @@
     <div class="tarjeta text-center">
         <div class="card-body">
             <p class="card-text">Encuentra tu sitio ideal y olvídate de pasar malos ratos.</p>
-            <a href="" class="btn btn-primary"> Ver más</a>
+            <a routerLink="/vistageneral" class="btn btn-primary"> Ver más</a>
         </div>
     </div>
     <div class="tarjeta text-center">
@@ -18,13 +18,13 @@
         <div class="card-body ">
 
             <p class="card-text">Visita lugares seguros y verificados con la ayuda de Best Places Montería</p>
-            <a href="" class="btn btn-primary"> Ver más</a>
+            <a routerLink="/vistageneral" class="btn btn-primary"> Ver más</a>
         </div>
     </div>
     <div class="tarjeta text-center">
         <div class="card-body">
             <p class="card-text">De la mano de Best Places posiciona tu emprendimiento</p>
-            <a href="" class="btn btn-primary"> Ver más</a>
+            <a routerLink="/vistageneral" class="btn btn-primary"> Ver más</a>
         </div>
     </div>
 </div>
