--- a/src/app/pages/postular/postular.component.html
+++ b/src/app/pages/postular/postular.component.html
@@ -1,4 +1,4 @@
-<app-nav [autenticado]="true"></app-nav>
+<app-nav [autenticado]="this.autenticado"></app-nav>
 
 <form action="" (ngSubmit)="Enviar(forma)" #forma="ngForm">
 
